--- a/index.html
+++ b/index.html
@@ -763,8 +763,8 @@
           </p>
         </div>
         <div class="w3-col l4">
-          <p><i class="fa fa-phone w3-xxlarge w3-text-light-grey"></i></p>
-          <p>+852-23933861</p>
+          <p><i class="fa fa-clock-o w3-xxlarge w3-text-light-grey"></i></p>
+          <p>Full Time Availability</p>
         </div>
         <div class="w3-col l4 w3-dark-grey">
           <p><i class="fa fa-github w3-xxlarge w3-text-light-grey"></i></p>
@@ -801,7 +801,7 @@
               title="#"
               style="text-decoration: underline"
             >
-              Skype/Heavenstar
+              Skype/Bright_Heavenstar
             </a>
           </p>
         </div>
