--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andrew Jin</title>
+    <title>Toll Card</title>
     <link rel="shortcut icon" href="./assets/images/logo.png" />
     <link rel="stylesheet" href="./assets/css/hero.css" />
     <link rel="stylesheet" href="./assets/css/portfolio.css" />
@@ -72,7 +72,7 @@
         <div>
           <div class="text-two">
             <div class="text-three" style="text-align: center">
-              Hi, I'm Andrew Jin.
+              Hi, I'm Toll Card.
             </div>
             <br />
             <h4 class="span loader">
@@ -135,7 +135,7 @@
                 <i class="fa fa-github w3-xlarge w3-text-light-grey"></i>
               </a>
               <a
-                href="https://www.linkedin.com/in/andrew-jin-b8aa85232/"
+                href="https://www.linkedin.com/in/toll-card-b8aa85232/"
                 target="_blank"
               >
                 <i class="fa fa-linkedin w3-xlarge w3-text-light-grey"></i>
@@ -758,7 +758,7 @@
             <a
               href="mailTo: javier900203@gmail.com?Subject=I'd like to have a interview with you."
               style="text-decoration: underline"
-              >andrewjin627@gmail.com</a
+              >tollAwesome627@gmail.com</a
             >
           </p>
         </div>
@@ -850,7 +850,7 @@
     </div>
     <!-- footer -->
     <div class="footer">
-      <p class="contact-title">&copy; Last Updated On April 15 2022</p>
+      <p class="contact-title">&copy; Last Updated On May 15 2022</p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
