--- a/index.html
+++ b/index.html
@@ -433,21 +433,21 @@
       <div class="grid-item" data-filter="website">
         <a
           class="popupimg"
-          href="./assets/images/portfolio/bluejestic.png"
+          href="./assets/images/portfolio/convose.png"
           target="_blank"
         >
           <img
             class="lazy"
-            data-src="./assets/images/portfolio/bluejestic.png"
+            data-src="./assets/images/portfolio/convose.png"
           />
         </a>
         <div class="overlay">
           <a
-            href="https://bluejestic.com/"
+            href="https://convose.com/"
             target="_blank"
             class="imageLink"
             title="https://bluejestic.com/"
-            >Next + TypeScript + TailwindCSS</a
+            >Next + TypeScript + RTC</a
           >
         </div>
       </div>
